--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- TODO: Set the document title to the name of your application -->
     <title>Semeando Família</title>
-    <meta name="description" content="LJ SISTEMAS" />
+    <meta name="description" content="Corrida Rústica" />
     <meta name="author" content="LJ SISTEMAS" />
 
     <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
+    <meta property="og:title" content="Semeando Família" />
     <meta property="og:description" content="LJ SISTEMAS" />
     <meta property="og:type" content="website" />
   </head>
