--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta property="og:title" content="Semeando Família" />
     <meta property="og:description" content="LJ SISTEMAS" />
     <meta property="og:type" content="website" />
+    <meta property="og:image" content="/IMG_1848.jpeg" />
   </head>
 
   <body>
