Update author and Open Graph description metadata

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <!-- TODO: Set the document title to the name of your application -->
     <title>Semeando Família</title>
     <meta name="description" content="Corrida Rústica" />
-    <meta name="author" content="LJ SISTEMAS" />
+    <meta name="author" content="Semeando Família" />
 
     <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Semeando Família" />
-    <meta property="og:description" content="LJ SISTEMAS" />
+    <meta property="og:description" content="Semeando Família" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/IMG_1848.jpeg" />
   </head>
